@@ -1,41 +1,56 @@
 plugins {
-  id 'application'
-  id 'org.openjfx.javafxplugin' version '0.1.0' //Plugin que ayuda a construir proyectos JAVAFX
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 javafx {
     version = "25"
-    modules = [ 'javafx.base', 'javafx.controls']
+    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.web' ]
 }
 
 dependencies {
-    //No es necesario incluir las dependencias porque ya lo hace el plugin por nosotros
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.controlsfx:controlsfx:11.2.1'
+
+    // Ikonli - Iconos Material Design
+    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
+    implementation 'org.kordamp.ikonli:ikonli-materialdesign-pack:12.3.1'
+
+    // JasperReports - Generación de informes
+    implementation 'net.sf.jasperreports:jasperreports:6.21.3'
+    
+    // OpenPDF - Compatible con JasperReports 6.21+ (reemplaza a iText antiguo)
+    implementation 'com.github.librepdf:openpdf:1.3.30'
+    
+    // Otras dependencias de JasperReports
+    implementation 'org.jfree:jfreechart:1.0.19'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'commons-digester:commons-digester:2.1'
+    implementation 'commons-logging:commons-logging:1.3.0'
 }
 
-java { //Se indica la versión de JDK que ha de utilizar
+java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(24)
     }
 }
 
-application { //Definimos clase principal del proyecto
-    mainClass = 'tema2.proyectobase.PlantillaFX'
+application {
+    mainClass = 'app.granatour.Main'
+    applicationDefaultJvmArgs = [
+        '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED'
+    ]
 }
 
 sourceSets {
-  main {
-    resources {
-        srcDirs = ["src/main/resources"]
-        includes = ["**/*.fxml"]  //Importante para poder abrir una extensión no reconocida
+    main {
+        resources {
+            srcDirs = ["src/main/resources"]
+            includes = ["**/*.fxml", "**/*.png", "**/*.jpg", "**/*.css", "**/*.properties", "**/*.jrxml", "**/*.jasper"]
+        }
     }
-  }
 }
-
-
-
-
-
